# fdk-aac-android

./: .gitmodules  README.org  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/github/bobcromwell/androidaacencodesample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/bobcromwell/androidaacencodesample/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/bobcromwell/androidaacencodesample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib/aac-encoder/: build.gradle  proguard-rules.pro
lib/aac-encoder/src/androidTest/java/com/fenbi/tutor/live/aac_encoder/: ExampleInstrumentedTest.java
lib/aac-encoder/src/main/: AndroidManifest.xml
lib/aac-encoder/src/main/java/com/github/bobcromwell/aacencoder/: AACEncoder.java  NativeAACEncoder.java
lib/aac-encoder/src/main/jni/: CMakeLists.txt
lib/aac-encoder/src/main/jni/audioenc/: aacenc.c  aacenc.h  audioenc_jni.cpp
lib/aac-encoder/src/main/res/values/: strings.xml
lib/aac-encoder/src/test/java/com/fenbi/tutor/live/aac_encoder/: ExampleUnitTest.java
